syntax = "proto3";

package infraboard.mpaas.cluster;
option go_package = "github.com/infraboard/mpaas/apps/cluster";

import "mcube/pb/resource/meta.proto";

message ClusterSet {
    // 总数
    int64 total = 1;
    // 清单
    repeated Cluster items = 2;
}

// 部署集群
message Cluster  {
    // 元信息
    // @gotags: bson:",inline" json:"meta"
    infraboard.mcube.resource.Meta meta = 1;
    // 创建信息
    // @gotags: bson:",inline" json:"spec"
    CreateClusterRequest spec = 2;
}

message CreateClusterRequest {
    // 对象所在域
    // @gotags: bson:"domain" json:"domain"
    string domain = 1;
    // 对象所在空间
    // @gotags: bson:"namespace" json:"namespace"
    string namespace = 2;
    // 集群所属环境
    // @gotags: bson:"environment" json:"environment" validate:"required"
    string environment = 3;
    // 集群名称
    // @gotags: bson:"name" json:"name"
    string name = 4;
    // 集群描述
    // @gotags: bson:"describe" json:"describe"
    string describe = 5;
    // 部署标签
    // @gotags: bson:"labels" json:"labels"
    map<string,string> labels = 15;
}
